<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_metal"
    tools:context="com.kunze.caisseenregistreuse.NouveauProduit">

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/choixcategorie"
        android:textColor="@color/black"
        android:textSize="@dimen/tailletextetarif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerCategorie"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/spinner_dropdown_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <ListView
        android:id="@+id/listProduits"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/listeprod"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/listProduits"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/listProduits"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:backgroundTint="@color/orangeClub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_home_white_18dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/blueClub"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCategorie"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinnerCategorie"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategorie"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enregistrerProd"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/EntrerProd"
            android:textColor="@color/black"
            android:textSize="@dimen/tailletextetarif" />

        <EditText
            android:id="@+id/editTextLibelle"
            android:layout_width="400dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textSize="@dimen/tailletextetarif"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/entrertarif"
            android:textColor="@color/black"
            android:textSize="@dimen/tailletextetarif" />

        <EditText
            android:id="@+id/editTextPrix"
            android:layout_width="400dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:padding="5dp"
            android:text="0.00"
            android:textSize="@dimen/tailletextetarif"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEnregistrerProduit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/borderbouton"
            android:padding="5dp"
            android:text="@string/SaveProd"
            android:textSize="@dimen/tailletextetarif" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>