<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_metal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/historique"
        android:layout_width="@dimen/boutonaccueilwidth"
        android:layout_height="@dimen/boutonaccueilheight"
        android:layout_marginTop="8dp"
        android:background="@drawable/borderbouton"
        android:text="@string/historiquecommande"
        android:textSize="@dimen/tailletextboutonaccueil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nouvelleCommande"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/listeCSV"
        android:layout_width="@dimen/boutonaccueilwidth"
        android:layout_height="@dimen/boutonaccueilheight"
        android:layout_marginTop="8dp"
        android:background="@drawable/borderbouton"
        android:padding="15dp"
        android:text="@string/ListCSV"
        android:textSize="@dimen/tailletextboutonaccueil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historique"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nouvelleCommande"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="@dimen/boutonaccueilwidth"
        android:layout_height="@dimen/boutonaccueilheight"
        android:layout_marginTop="8dp"
        android:background="@drawable/borderbouton"
        android:text="@string/nouvellecommande"
        android:textColor="@color/black"
        android:textSize="@dimen/tailletextboutonaccueil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPDF"
        android:layout_width="@dimen/boutonaccueilwidth"
        android:layout_height="@dimen/boutonaccueilheight"
        android:layout_marginTop="8dp"
        android:background="@drawable/borderbouton"
        android:text="Liste des factures au format PDF"
        android:textColor="@color/black"
        android:textSize="@dimen/tailletextboutonaccueil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/listeCSV"
        app:layout_constraintStart_toStartOf="@+id/listeCSV"
        app:layout_constraintTop_toBottomOf="@+id/listeCSV"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>