<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_metal"
    tools:context="com.kunze.caisseenregistreuse.Historique">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="@dimen/widthlistViewCommande"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/blueClub"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/showOrder"
            android:textColor="@color/black"
            android:textSize="@dimen/tailletextetarif" />

        <Spinner
            android:id="@+id/spinnerTri"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:drawable/spinner_dropdown_background" />

        <TextView
            android:id="@+id/choix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="@dimen/tailletextetarif" />

        <Spinner
            android:id="@+id/spinnerCommmandeTriee"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:drawable/spinner_dropdown_background" />

        <TextView
            android:id="@+id/textFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/trierPar"
            android:textColor="@color/black"
            android:textSize="@dimen/tailletextetarif" />

        <RadioGroup
            android:id="@+id/radioHisto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checkedButton="@id/radioButtonProduit"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonProduit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Produit" />

            <RadioButton
                android:id="@+id/radioButtonCategorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categorie" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinnerTriFin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@android:drawable/spinner_dropdown_background" />
    </LinearLayout>

    <ListView
        android:id="@+id/listTriee"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/fabHistorique"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enregistrerCSV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="20dp"
        android:text="@string/enregistrerCSV"
        android:textSize="@dimen/tailletexteboutoncommande"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tarifhistoComm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/borderbouton"
        android:padding="10dp"
        android:text="TextView"
        android:textAlignment="textEnd"
        android:textColor="@color/holo_red"
        android:textSize="20sp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/listTriee"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/listTriee"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:text="Total"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tarifhistoComm"
        app:layout_constraintEnd_toStartOf="@+id/tarifhistoComm"
        app:layout_constraintStart_toStartOf="@+id/listTriee"
        app:layout_constraintTop_toTopOf="@+id/tarifhistoComm" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabHistorique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:backgroundTint="@color/orangeClub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_home_white_18dp" />

</androidx.constraintlayout.widget.ConstraintLayout>